--- a/index.html
+++ b/index.html
@@ -358,43 +358,49 @@ body{
         <div style="background-color: white; color: #000; text-align: center;">
             <div class="container" style="font-size: 20px;">Icaro Desenvolvedor Web</div>
         </div>
-   <!-- Bootstrap Video Modal - Projeto 1 -->
+  <!-- Modelo Base: Substitua apenas o conteúdo interno (título, iframe e descrição) para os outros projetos -->
+
+<!-- Projeto 1 -->
 <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg">
-    <div class="modal-content rounded-4 shadow">
-      <div class="modal-header border-0">
+  <div class="modal-dialog modal-dialog-centered modal-sm">
+    <div class="modal-content rounded-3 shadow-sm">
+      <div class="modal-header border-0 p-2">
         <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
-      <div class="modal-body text-center">
-        <h2 class="text-uppercase text-secondary mb-4">Projeto 1</h2>
-        <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
-        <div class="d-flex justify-content-center mb-4">
-          <div class="ratio ratio-16x9" style="max-width: 400px; width: 100%; max-height:230; heigth:100%;">
-            <iframe src="https://www.youtube.com/embed/6Z79fOVQrfI?si=0ZL-VlUP3ZgiaCKo" allowfullscreen></iframe>
-          </div>
+      <div class="modal-body text-center px-3 pb-4 pt-2">
+        <h4 class="text-uppercase text-secondary mb-3">Projeto 1</h4>
+        <div class="divider-custom mb-3">
+          <div class="divider-custom-line"></div>
+          <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+          <div class="divider-custom-line"></div>
         </div>
-        <h5><strong>Esses são meus projetos em HTML, CSS e Javascript</strong></h5>
-        <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
+        <div class="ratio ratio-16x9 mb-3" style="max-width: 100%;">
+          <iframe src="https://www.youtube.com/embed/6Z79fOVQrfI?si=0ZL-VlUP3ZgiaCKo" allowfullscreen></iframe>
+        </div>
+        <small><strong>Esses são meus projetos em HTML, CSS e Javascript</strong></small>
+        <button class="btn btn-dark btn-sm mt-3" data-bs-dismiss="modal">
+          <i class="fas fa-xmark fa-fw"></i> Fechar
+        </button>
       </div>
     </div>
   </div>
 </div>
 
+<!-- Copie e altere para os demais -->
+
 <!-- Projeto 2 -->
 <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg">
-    <div class="modal-content rounded-4 shadow">
-      <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
-      <div class="modal-body text-center">
-        <h2 class="text-uppercase text-secondary mb-4">Projeto 2</h2>
-        <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
-        <div class="d-flex justify-content-center mb-4">
-          <div class="ratio ratio-16x9" style="max-width: 400px; width: 100%; max-height:230; heigth:100%;">
-            <iframe src="https://www.youtube.com/embed/Dklrf10nk7o?si=0DYTF_lNVQhH7TAq" allowfullscreen></iframe>
-          </div>
-        </div>
-        <h5><strong>Projeto usando Node.js e React.js para um E-Commerce (incompleto)</strong></h5>
-        <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
+  <div class="modal-dialog modal-dialog-centered modal-sm">
+    <div class="modal-content rounded-3 shadow-sm">
+      <div class="modal-header border-0 p-2">
+        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
+      </div>
+      <div class="modal-body text-center px-3 pb-4 pt-2">
+        <h4 class="text-uppercase text-secondary mb-3">Projeto 2</h4>
+        <div class="divider-custom mb-3"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
+        <div class="ratio ratio-16x9 mb-3"><iframe src="https://www.youtube.com/embed/Dklrf10nk7o?si=0DYTF_lNVQhH7TAq" allowfullscreen></iframe></div>
+        <small><strong>Projeto usando Node.js e React.js para um E-Commerce (incompleto)</strong></small>
+        <button class="btn btn-dark btn-sm mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
       </div>
     </div>
   </div>
@@ -402,19 +408,15 @@ body{
 
 <!-- Projeto 3 -->
 <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg">
-    <div class="modal-content rounded-4 shadow">
-      <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
-      <div class="modal-body text-center">
-        <h2 class="text-uppercase text-secondary mb-4">Projeto 3</h2>
-        <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
-        <div class="d-flex justify-content-center mb-4">
-          <div class="ratio ratio-16x9" style="max-width: 400px; width: 100%; max-height:230; heigth:100%;">
-            <iframe src="https://www.youtube.com/embed/rdXlVZABsCs?si=MDEn-pfCcZ6yiEet" allowfullscreen></iframe>
-          </div>
-        </div>
-        <h5><strong>Projeto desktop usando JavaFX</strong></h5>
-        <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
+  <div class="modal-dialog modal-dialog-centered modal-sm">
+    <div class="modal-content rounded-3 shadow-sm">
+      <div class="modal-header border-0 p-2"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
+      <div class="modal-body text-center px-3 pb-4 pt-2">
+        <h4 class="text-uppercase text-secondary mb-3">Projeto 3</h4>
+        <div class="divider-custom mb-3"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
+        <div class="ratio ratio-16x9 mb-3"><iframe src="https://www.youtube.com/embed/rdXlVZABsCs?si=MDEn-pfCcZ6yiEet" allowfullscreen></iframe></div>
+        <small><strong>Projeto desktop usando JavaFX</strong></small>
+        <button class="btn btn-dark btn-sm mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
       </div>
     </div>
   </div>
@@ -422,19 +424,15 @@ body{
 
 <!-- Projeto 4 -->
 <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg">
-    <div class="modal-content rounded-4 shadow">
-      <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
-      <div class="modal-body text-center">
-        <h2 class="text-uppercase text-secondary mb-4">Projeto 4</h2>
-        <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
-        <div class="d-flex justify-content-center mb-4">
-          <div class="ratio ratio-16x9" style="max-width: 400px; width: 100%; max-height:230; heigth:100%;">
-            <iframe src="https://www.youtube.com/embed/kaQ21zzBSRQ?si=0zJYfxcsgIufzFyY" allowfullscreen></iframe>
-          </div>
-        </div>
-        <h5><strong>Aplicação web completa em Spring Boot (Desafio da Ada)</strong></h5>
-        <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
+  <div class="modal-dialog modal-dialog-centered modal-sm">
+    <div class="modal-content rounded-3 shadow-sm">
+      <div class="modal-header border-0 p-2"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
+      <div class="modal-body text-center px-3 pb-4 pt-2">
+        <h4 class="text-uppercase text-secondary mb-3">Projeto 4</h4>
+        <div class="divider-custom mb-3"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
+        <div class="ratio ratio-16x9 mb-3"><iframe src="https://www.youtube.com/embed/kaQ21zzBSRQ?si=0zJYfxcsgIufzFyY" allowfullscreen></iframe></div>
+        <small><strong>Aplicação web completa em Spring Boot (Desafio da Ada)</strong></small>
+        <button class="btn btn-dark btn-sm mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
       </div>
     </div>
   </div>
@@ -442,19 +440,15 @@ body{
 
 <!-- Projeto 5 -->
 <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg">
-    <div class="modal-content rounded-4 shadow">
-      <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
-      <div class="modal-body text-center">
-        <h2 class="text-uppercase text-secondary mb-4">Projeto 5</h2>
-        <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
-        <div class="d-flex justify-content-center mb-4">
-          <div class="ratio ratio-16x9" style="max-width: 400px; width: 100%; max-height:230; heigth:100%;">
-            <iframe src="https://www.youtube.com/embed/Wi3Kys17v70?si=f1e5FVRXfG7Gq6EW" allowfullscreen></iframe>
-          </div>
-        </div>
-        <h5><strong>Back-end do projeto 4 em Spring Boot</strong></h5>
-        <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
+  <div class="modal-dialog modal-dialog-centered modal-sm">
+    <div class="modal-content rounded-3 shadow-sm">
+      <div class="modal-header border-0 p-2"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
+      <div class="modal-body text-center px-3 pb-4 pt-2">
+        <h4 class="text-uppercase text-secondary mb-3">Projeto 5</h4>
+        <div class="divider-custom mb-3"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
+        <div class="ratio ratio-16x9 mb-3"><iframe src="https://www.youtube.com/embed/Wi3Kys17v70?si=f1e5FVRXfG7Gq6EW" allowfullscreen></iframe></div>
+        <small><strong>Back-end do projeto 4 em Spring Boot</strong></small>
+        <button class="btn btn-dark btn-sm mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
       </div>
     </div>
   </div>
@@ -462,19 +456,15 @@ body{
 
 <!-- Projeto 6 -->
 <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg">
-    <div class="modal-content rounded-4 shadow">
-      <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
-      <div class="modal-body text-center">
-        <h2 class="text-uppercase text-secondary mb-4">Projeto 6</h2>
-        <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
-        <div class="d-flex justify-content-center mb-4">
-          <div class="ratio ratio-16x9" style="max-width: 400px; width: 100%; max-height:230; heigth:100%;">
-            <iframe src="https://www.youtube.com/embed/PeWQL_bShmA?si=iSMk1FCEaEF9xLuf" allowfullscreen></iframe>
-          </div>
-        </div>
-        <h5><strong>Aplicação desktop de um launcher gamer em C#</strong></h5>
-        <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
+  <div class="modal-dialog modal-dialog-centered modal-sm">
+    <div class="modal-content rounded-3 shadow-sm">
+      <div class="modal-header border-0 p-2"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
+      <div class="modal-body text-center px-3 pb-4 pt-2">
+        <h4 class="text-uppercase text-secondary mb-3">Projeto 6</h4>
+        <div class="divider-custom mb-3"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
+        <div class="ratio ratio-16x9 mb-3"><iframe src="https://www.youtube.com/embed/PeWQL_bShmA?si=iSMk1FCEaEF9xLuf" allowfullscreen></iframe></div>
+        <small><strong>Aplicação desktop de um launcher gamer em C#</strong></small>
+        <button class="btn btn-dark btn-sm mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
       </div>
     </div>
   </div>
@@ -482,19 +472,15 @@ body{
 
 <!-- Projeto 7 -->
 <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg">
-    <div class="modal-content rounded-4 shadow">
-      <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
-      <div class="modal-body text-center">
-        <h2 class="text-uppercase text-secondary mb-4">Projeto 7</h2>
-        <div class="divider-custom mb-4"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
-        <div class="d-flex justify-content-center mb-4">
-          <div class="ratio ratio-16x9" style="max-width: 400px; width: 100%; max-height:230; heigth:100%;">
-            <iframe src="https://www.youtube.com/embed/ttEas1pFiK4?si=wQZVJegu8XAG1i7f" allowfullscreen></iframe>
-          </div>
-        </div>
-        <h5><strong>Minha primeira aplicação em JavaFX</strong></h5>
-        <button class="btn btn-dark mt-4" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar janela</button>
+  <div class="modal-dialog modal-dialog-centered modal-sm">
+    <div class="modal-content rounded-3 shadow-sm">
+      <div class="modal-header border-0 p-2"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
+      <div class="modal-body text-center px-3 pb-4 pt-2">
+        <h4 class="text-uppercase text-secondary mb-3">Projeto 7</h4>
+        <div class="divider-custom mb-3"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
+        <div class="ratio ratio-16x9 mb-3"><iframe src="https://www.youtube.com/embed/ttEas1pFiK4?si=wQZVJegu8XAG1i7f" allowfullscreen></iframe></div>
+        <small><strong>Minha primeira aplicação em JavaFX</strong></small>
+        <button class="btn btn-dark btn-sm mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
       </div>
     </div>
   </div>
