--- a/index.html
+++ b/index.html
@@ -360,47 +360,43 @@ body{
         </div>
   <!-- Modelo Base: Substitua apenas o conteúdo interno (título, iframe e descrição) para os outros projetos -->
 
+<!-- TODOS OS 7 MODAIS -->
+
 <!-- Projeto 1 -->
 <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-sm">
-    <div class="modal-content rounded-3 shadow-sm">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content rounded-4 shadow" style="max-height: 90vh; overflow-y: auto;">
       <div class="modal-header border-0 p-2">
         <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
       </div>
-      <div class="modal-body text-center px-3 pb-4 pt-2">
-        <h4 class="text-uppercase text-secondary mb-3">Projeto 1</h4>
+      <div class="modal-body text-center px-4 pb-4 pt-2">
+        <h2 class="text-uppercase text-secondary mb-3">Projeto 1</h2>
         <div class="divider-custom mb-3">
           <div class="divider-custom-line"></div>
           <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
           <div class="divider-custom-line"></div>
         </div>
-        <div class="ratio ratio-16x9 mb-3" style="max-width: 100%;">
+        <div class="ratio ratio-16x9 mb-3">
           <iframe src="https://www.youtube.com/embed/6Z79fOVQrfI?si=0ZL-VlUP3ZgiaCKo" allowfullscreen></iframe>
         </div>
-        <small><strong>Esses são meus projetos em HTML, CSS e Javascript</strong></small>
-        <button class="btn btn-dark btn-sm mt-3" data-bs-dismiss="modal">
-          <i class="fas fa-xmark fa-fw"></i> Fechar
-        </button>
+        <h6><strong>Esses são meus projetos em HTML, CSS e Javascript</strong></h6>
+        <button class="btn btn-dark mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Copie e altere para os demais -->
-
 <!-- Projeto 2 -->
 <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-sm">
-    <div class="modal-content rounded-3 shadow-sm">
-      <div class="modal-header border-0 p-2">
-        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Fechar"></button>
-      </div>
-      <div class="modal-body text-center px-3 pb-4 pt-2">
-        <h4 class="text-uppercase text-secondary mb-3">Projeto 2</h4>
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content rounded-4 shadow" style="max-height: 90vh; overflow-y: auto;">
+      <div class="modal-header border-0 p-2"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
+      <div class="modal-body text-center px-4 pb-4 pt-2">
+        <h2 class="text-uppercase text-secondary mb-3">Projeto 2</h2>
         <div class="divider-custom mb-3"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
         <div class="ratio ratio-16x9 mb-3"><iframe src="https://www.youtube.com/embed/Dklrf10nk7o?si=0DYTF_lNVQhH7TAq" allowfullscreen></iframe></div>
-        <small><strong>Projeto usando Node.js e React.js para um E-Commerce (incompleto)</strong></small>
-        <button class="btn btn-dark btn-sm mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
+        <h6><strong>Projeto usando Node.js e React.js para um E-Commerce (incompleto)</strong></h6>
+        <button class="btn btn-dark mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
       </div>
     </div>
   </div>
@@ -408,15 +404,15 @@ body{
 
 <!-- Projeto 3 -->
 <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-sm">
-    <div class="modal-content rounded-3 shadow-sm">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content rounded-4 shadow" style="max-height: 90vh; overflow-y: auto;">
       <div class="modal-header border-0 p-2"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
-      <div class="modal-body text-center px-3 pb-4 pt-2">
-        <h4 class="text-uppercase text-secondary mb-3">Projeto 3</h4>
+      <div class="modal-body text-center px-4 pb-4 pt-2">
+        <h2 class="text-uppercase text-secondary mb-3">Projeto 3</h2>
         <div class="divider-custom mb-3"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
         <div class="ratio ratio-16x9 mb-3"><iframe src="https://www.youtube.com/embed/rdXlVZABsCs?si=MDEn-pfCcZ6yiEet" allowfullscreen></iframe></div>
-        <small><strong>Projeto desktop usando JavaFX</strong></small>
-        <button class="btn btn-dark btn-sm mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
+        <h6><strong>Projeto desktop usando JavaFX</strong></h6>
+        <button class="btn btn-dark mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
       </div>
     </div>
   </div>
@@ -424,15 +420,15 @@ body{
 
 <!-- Projeto 4 -->
 <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-sm">
-    <div class="modal-content rounded-3 shadow-sm">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content rounded-4 shadow" style="max-height: 90vh; overflow-y: auto;">
       <div class="modal-header border-0 p-2"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
-      <div class="modal-body text-center px-3 pb-4 pt-2">
-        <h4 class="text-uppercase text-secondary mb-3">Projeto 4</h4>
+      <div class="modal-body text-center px-4 pb-4 pt-2">
+        <h2 class="text-uppercase text-secondary mb-3">Projeto 4</h2>
         <div class="divider-custom mb-3"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
         <div class="ratio ratio-16x9 mb-3"><iframe src="https://www.youtube.com/embed/kaQ21zzBSRQ?si=0zJYfxcsgIufzFyY" allowfullscreen></iframe></div>
-        <small><strong>Aplicação web completa em Spring Boot (Desafio da Ada)</strong></small>
-        <button class="btn btn-dark btn-sm mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
+        <h6><strong>Aplicação web completa em Spring Boot (Desafio da Ada)</strong></h6>
+        <button class="btn btn-dark mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
       </div>
     </div>
   </div>
@@ -440,15 +436,15 @@ body{
 
 <!-- Projeto 5 -->
 <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-sm">
-    <div class="modal-content rounded-3 shadow-sm">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content rounded-4 shadow" style="max-height: 90vh; overflow-y: auto;">
       <div class="modal-header border-0 p-2"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
-      <div class="modal-body text-center px-3 pb-4 pt-2">
-        <h4 class="text-uppercase text-secondary mb-3">Projeto 5</h4>
+      <div class="modal-body text-center px-4 pb-4 pt-2">
+        <h2 class="text-uppercase text-secondary mb-3">Projeto 5</h2>
         <div class="divider-custom mb-3"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
         <div class="ratio ratio-16x9 mb-3"><iframe src="https://www.youtube.com/embed/Wi3Kys17v70?si=f1e5FVRXfG7Gq6EW" allowfullscreen></iframe></div>
-        <small><strong>Back-end do projeto 4 em Spring Boot</strong></small>
-        <button class="btn btn-dark btn-sm mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
+        <h6><strong>Back-end do projeto 4 em Spring Boot</strong></h6>
+        <button class="btn btn-dark mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
       </div>
     </div>
   </div>
@@ -456,15 +452,15 @@ body{
 
 <!-- Projeto 6 -->
 <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-sm">
-    <div class="modal-content rounded-3 shadow-sm">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content rounded-4 shadow" style="max-height: 90vh; overflow-y: auto;">
       <div class="modal-header border-0 p-2"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
-      <div class="modal-body text-center px-3 pb-4 pt-2">
-        <h4 class="text-uppercase text-secondary mb-3">Projeto 6</h4>
+      <div class="modal-body text-center px-4 pb-4 pt-2">
+        <h2 class="text-uppercase text-secondary mb-3">Projeto 6</h2>
         <div class="divider-custom mb-3"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
         <div class="ratio ratio-16x9 mb-3"><iframe src="https://www.youtube.com/embed/PeWQL_bShmA?si=iSMk1FCEaEF9xLuf" allowfullscreen></iframe></div>
-        <small><strong>Aplicação desktop de um launcher gamer em C#</strong></small>
-        <button class="btn btn-dark btn-sm mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
+        <h6><strong>Aplicação desktop de um launcher gamer em C#</strong></h6>
+        <button class="btn btn-dark mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
       </div>
     </div>
   </div>
@@ -472,15 +468,15 @@ body{
 
 <!-- Projeto 7 -->
 <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-sm">
-    <div class="modal-content rounded-3 shadow-sm">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content rounded-4 shadow" style="max-height: 90vh; overflow-y: auto;">
       <div class="modal-header border-0 p-2"><button class="btn-close" type="button" data-bs-dismiss="modal"></button></div>
-      <div class="modal-body text-center px-3 pb-4 pt-2">
-        <h4 class="text-uppercase text-secondary mb-3">Projeto 7</h4>
+      <div class="modal-body text-center px-4 pb-4 pt-2">
+        <h2 class="text-uppercase text-secondary mb-3">Projeto 7</h2>
         <div class="divider-custom mb-3"><div class="divider-custom-line"></div><div class="divider-custom-icon"><i class="fas fa-star"></i></div><div class="divider-custom-line"></div></div>
         <div class="ratio ratio-16x9 mb-3"><iframe src="https://www.youtube.com/embed/ttEas1pFiK4?si=wQZVJegu8XAG1i7f" allowfullscreen></iframe></div>
-        <small><strong>Minha primeira aplicação em JavaFX</strong></small>
-        <button class="btn btn-dark btn-sm mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
+        <h6><strong>Minha primeira aplicação em JavaFX</strong></h6>
+        <button class="btn btn-dark mt-3" data-bs-dismiss="modal"><i class="fas fa-xmark fa-fw"></i> Fechar</button>
       </div>
     </div>
   </div>
